--- a/html/santi.html
+++ b/html/santi.html
@@ -7,57 +7,13 @@
     <link href="../image/Hutao.png" rel="icon">
 </head>
 <link href="../css/style.css" rel="stylesheet" type="text/css">
-<style>
-    .sidemenu {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        background-color: rgba(255, 255, 255, 0.7);
-        border-radius: 6px;
-    }
-
-    .sidemenu a {
-        display: block;
-        color: #000;
-        padding: 15px 16px;
-        text-decoration: none;
-        border-radius: 6px;
-    }
-
-    .sidemenu a.active {
-        background-color: #555;
-        color: white;
-    }
-
-    .sidemenu a:hover:not(.active) {
-        background-color: rgba(255, 255, 255, 1);
-    }
-
-    .row div {
-        float: left;
-        margin: 10px;
-    }
-
-    .content {
-        width: 70%;
-        margin: 20px;
-        padding: 0 30px;
-        border-radius: 6px;
-        background-color: rgba(255, 255, 255, 0.8);
-    }
-
-    .row {
-        height: 600px;
-    }
-</style>
-
 <body>
     <div class="header"><a href="../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
 
     <ul class="topmenu">
         <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;</li>
-        <li><a class="active" href="../index.html">首页</a></li>
+        <li><a href="../index.html">首页</a></li>
         <li><a href="html/complete.html">完本</a></li>
         <li><a href="html/famous.html">名家经典</a></li>
         <li><a href="html/foreign.html">国外经典</a></li>
@@ -68,6 +24,7 @@
         <li><a href="html/classify.html">作品分类</a></li>
     </ul>
     <hr color="white">
+
     <div class="row">
         <div>
             <ul class="sidemenu">
