--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>M36文学网</title>
-    <link href="image/web.png" rel="icon">
+    <link href="image/Hutao.png" rel="icon">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <script src="js/change.js"></script>
     <style>
@@ -26,9 +26,10 @@
             margin: 0 auto;
         }
 
+        /*主界面背景*/
         .row {
             margin: 10px;
-            background-color: rgba(175, 218, 210, 0.40);
+            background-color: white;
             padding: 10px;
             overflow: auto;
             display: flex;
@@ -36,6 +37,7 @@
             flex-wrap: wrap;
         }
 
+        /*主背景框内内容*/
         .row a {
             /*display: block;*/
             /*float: left;*/
@@ -43,8 +45,8 @@
             height: 225px;
             margin: 20px;
             padding: 0 30px;
-            border-radius: 6px;
-            background-color: rgba(255, 255, 255, 0.8);
+            border-radius: 30px;
+            background-color: #f1f2f3;
             text-decoration: none;
             color: black;
         }
@@ -62,7 +64,8 @@
 </head>
 
 <body>
-    <div class="header"><a href="index.html" title="返回首页"><img src="image/Hutao.png" alt="M36文学站" width="100" height="101"></a></div>
+<div class="header"><a href="index.html" title="返回首页"><img src="image/.png" alt="M36文学站" width="100"
+                                                               height="101"></a></div>
 
     <!--主页目录编辑-->
     <ul class="topmenu">
@@ -87,7 +90,7 @@
             层叠样式表(Cascading StyleSheet)
         </a>
         <a href="html/santi.html">
-            <h2>《三体》》</h2><img src="image/santi.jpg"><br>JavaScript是web的编程语言
+            <h2>《三体》》</h2><img src="image/santi.jpg"><br>
         </a>
         <a href="html/red.html">
             <h2>《红高粱》</h2><img src="image/red.jpg"><br>
@@ -108,7 +111,6 @@
             <h2>《老人与海》</h2><img src="image/older.jpg"><br>JavaScript是web的编程语言
         </a>
     </div>
-    <hr color="white">
     <div class="foot" style="display: block">
         <h3 align="center" class="sign">M36文学网</h3>
         <h3 align="center" class="time"></h3>
