--- a/html/fire.html
+++ b/html/fire.html
@@ -15,14 +15,14 @@
         &nbsp;
     </li>
     <li><a href="../index.html">首页</a></li>
-    <li><a href="html/complete.html">完本</a></li>
-    <li><a href="html/famous.html">名家经典</a></li>
-    <li><a href="html/foreign.html">国外经典</a></li>
-    <li><a href="html/Wuxia.html">武侠专区</a></li>
-    <li><a href="html/hist.html">历史专区</a></li>
-    <li><a href="html/sci.html">科幻专区</a></li>
-    <li><a href="html/fantasy.html">玄幻专区</a></li>
-    <li><a href="html/classify.html">作品分类</a></li>
+    <li><a href="../html/rank.html">排行</a></li>
+    <li><a href="../html/famous.html">名家经典</a></li>
+    <li><a href="../html/foreign.html">国外经典</a></li>
+    <li><a href="../html/Wuxia.html">武侠专区</a></li>
+    <li><a href="../html/hist.html">历史专区</a></li>
+    <li><a href="../html/sci.html">科幻专区</a></li>
+    <li><a href="../html/fantasy.html">玄幻专区</a></li>
+    <li><a href="../html/classify.html">作品分类</a></li>
 </ul>
 <hr color="white">
 <div class="row">
@@ -31,7 +31,7 @@
             <li><a href="to live.html">《活着》</a></li>
             <li><a href="blood.html">《许三观卖血记》</a></li>
             <li><a href="santi.html">《三体》</a></li>
-            <li><a href="red.html">《红高粱》</a></li>
+            <li><a href="zi.html">《骆驼祥子》</a></li>
             <li><a class="active" href="fire.html">《冰与火之歌》</a></li>
             <li><a href="people.html">《人间失格》</a></li>
             <li><a href="year.html">《百年孤独》</a></li>
@@ -73,7 +73,6 @@
                     </span><br>
                 <span class="pl">出版年:</span> 2013-10-1<br>
                 <span class="pl">页数:</span> 全五册<br>
-                <span class="pl">定价:</span> 330.00元<br>
                 <span class="pl">装帧:</span> 精装<br>
                 <span class="pl">丛书:</span>&nbsp;<a>独角兽书系</a><br>
                 <span class="pl">ISBN:</span> 9787223361835<br>
