--- a/html/santi.html
+++ b/html/santi.html
@@ -12,16 +12,17 @@
 
     <ul class="topmenu">
         <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            &nbsp;</li>
+            &nbsp;
+        </li>
         <li><a href="../index.html">首页</a></li>
-        <li><a href="html/complete.html">完本</a></li>
-        <li><a href="html/famous.html">名家经典</a></li>
-        <li><a href="html/foreign.html">国外经典</a></li>
-        <li><a href="html/Wuxia.html">武侠专区</a></li>
-        <li><a href="html/hist.html">历史专区</a></li>
-        <li><a href="html/sci.html">科幻专区</a></li>
-        <li><a href="html/fantasy.html">玄幻专区</a></li>
-        <li><a href="html/classify.html">作品分类</a></li>
+        <li><a href="../html/rank.html">排行</a></li>
+        <li><a href="../html/famous.html">名家经典</a></li>
+        <li><a href="../html/foreign.html">国外经典</a></li>
+        <li><a href="../html/Wuxia.html">武侠专区</a></li>
+        <li><a href="../html/hist.html">历史专区</a></li>
+        <li><a href="../html/sci.html">科幻专区</a></li>
+        <li><a href="../html/fantasy.html">玄幻专区</a></li>
+        <li><a href="../html/classify.html">作品分类</a></li>
     </ul>
     <hr color="white">
 
@@ -31,7 +32,7 @@
                 <li><a href="to live.html">《活着》</a></li>
                 <li><a href="blood.html">《许三观卖血记》</a></li>
                 <li><a class="active" href="santi.html">《三体》</a></li>
-                <li><a href="red.html">《红高粱》</a></li>
+                <li><a href="zi.html">《骆驼祥子》</a></li>
                 <li><a href="fire.html">《冰与火之歌》</a></li>
                 <li><a href="people.html">《人间失格》</a></li>
                 <li><a href="year.html">《百年孤独》</a></li>
@@ -68,7 +69,6 @@
                     <br>
                     <span class="pl">出版年:</span> 2008-1<br>
                     <span class="pl">页数:</span> 1283<br>
-                    <span class="pl">定价:</span> 93.00元<br>
                     <span class="pl">装帧:</span> 平装<br>
                     <span class="pl">ISBN:</span> 9787540471248<br>
                 </div>
