--- a/html/to live.html
+++ b/html/to live.html
@@ -7,22 +7,25 @@
     <link href="../image/Hutao.png" rel="icon">
 </head>
 <link href="../css/style.css" rel="stylesheet" type="text/css">
+
 <body>
     <div class="header"><a href="../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
-
+<!-- 顶部菜单 -->
     <ul class="topmenu">
         <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            &nbsp;</li>
+            &nbsp;
+        </li>
         <li><a href="../index.html">首页</a></li>
-        <li><a href="html/complete.html">完本</a></li>
-        <li><a href="html/famous.html">名家经典</a></li>
-        <li><a href="html/foreign.html">国外经典</a></li>
-        <li><a href="html/Wuxia.html">武侠专区</a></li>
-        <li><a href="html/hist.html">历史专区</a></li>
-        <li><a href="html/sci.html">科幻专区</a></li>
-        <li><a href="html/fantasy.html">玄幻专区</a></li>
-        <li><a href="html/classify.html">作品分类</a></li>
+        <li><a href="../html/rank.html">排行</a></li>
+        <li><a href="../html/famous.html">名家经典</a></li>
+        <li><a href="../html/foreign.html">国外经典</a></li>
+        <li><a href="../html/Wuxia.html">武侠专区</a></li>
+        <li><a href="../html/hist.html">历史专区</a></li>
+        <li><a href="../html/sci.html">科幻专区</a></li>
+        <li><a href="../html/fantasy.html">玄幻专区</a></li>
+        <li><a href="../html/classify.html">作品分类</a></li>
     </ul>
+    <!-- 侧边栏 -->
     <hr color="white">
     <div class="row">
         <div>
@@ -30,7 +33,7 @@
                 <li><a class="active" href="to live.html">《活着》</a></li>
                 <li><a href="blood.html">《许三观卖血记》</a></li>
                 <li><a href="santi.html">《三体》</a></li>
-                <li><a href="red.html">《红高粱》</a></li>
+                <li><a href="zi.html">《骆驼祥子》</a></li>
                 <li><a href="fire.html">《冰与火之歌》</a></li>
                 <li><a href="people.html">《人间失格》</a></li>
                 <li><a href="year.html">《百年孤独》</a></li>
@@ -38,68 +41,62 @@
                 <li><a href="older.html">《老人与海》</a></li>
             </ul>
         </div>
-
         <div class="content">
+            <!--书籍-->
             <h1>
                 <span property="v:itemreviewed">
                     <a class="" href="https://cread.jd.com/read/startRead.action?bookId=30286863&readType=1"
-                        style="text-decoration:none" target="_blank">活着</a>
+                       style="text-decoration:none" target="_blank">活着</a>
                 </span>
-                <div class="clear"></div>
             </h1>
-            <div class="subject clearfix">
-                <div id="mainpic" class="">
-                    <a class="nbg" href="https://img1.doubanio.com/view/subject/l/public/s29652928.jpg" title="活着">
-                        <img src="https://img1.doubanio.com/view/subject/s/public/s29652928.jpg" title="点击看大图" alt="活着"
-                            rel="v:photo" style="max-width: 135px;max-height: 200px;">
-                    </a>
-                    <!--把照片换成本地-->
-                </div>
-                <div id="info" class="">
-                    <span>
-                        <span class="pl"> 作者</span>:
-
-                        <a class=""
-                            href="https://baike.baidu.com/item/%E4%BD%99%E5%8D%8E/6935?fromModule=lemma_search-box">余华</a>
-                    </span><br>
-                    <span class="pl">出版社:</span>
-                    <a>北京十月文艺出版社</a>
-                    <br>
-                    <span class="pl">出品方:</span>
-                    <a>新经典文化</a>
-                    <br>
-                    <span class="pl">出版年:</span> 2017-6-1<br>
-                    <span class="pl">页数:</span> 224<br>
-                    <span class="pl">定价:</span> 35.00元<br>
-                    <span class="pl">装帧:</span> 精装<br>
-                    <span class="pl">丛书:</span>&nbsp;<a>新经典文库：余华作品</a><br>
-                    <span class="pl">ISBN:</span> 9787530215593<br>
-                </div>
-
+            <!--书籍封面图片-->
+            <div>
+                <img src="../image/live.jpg" alt="活着" style="max-width: 135px;max-height: 200px;">
+                </a>
             </div>
-            <div class="indent">
+            <!--书籍详细简介-->
+            <span>
+                <span class="pl"> 作者</span>:
+
+                <a class=""
+                   href="https://baike.baidu.com/item/%E4%BD%99%E5%8D%8E/6935?fromModule=lemma_search-box">余华</a>
+            </span><br>
+            <span class="pl">出版社:</span>
+            <a>北京十月文艺出版社</a>
+            <br>
+            <span class="pl">出品方:</span>
+            <a>新经典文化</a>
+            <br>
+            <span class="pl">出版年:</span> 2017-6-1<br>
+            <span class="pl">页数:</span> 224<br>
+            <span class="pl">装帧:</span> 精装<br>
+            <span class="pl">丛书:</span>&nbsp;<a>新经典文库：余华作品</a><br>
+            <span class="pl">ISBN:</span> 9787530215593<br>
+            <div>
                 <h2>
                     <span>内容简介</span>
                     &nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·
-
                 </h2>
-                <div class="intro">
-                    <p>《活着(新版)》讲述了农村人福贵悲惨的人生遭遇。福贵本是个阔少爷，可他嗜赌如命，终于赌光了家业，一贫如洗。他的父亲被他活活气死，母亲则在穷困中患了重病，福贵前去求药，却在途中被国民党抓去当壮丁。经过几番波折回到家里，才知道母亲早已去世，妻子家珍含辛茹苦地养大两个儿女。此后更加悲惨的命运一次又一次降临到福贵身上，他的妻子、儿女和孙子相继死去，最后只剩福贵和一头老牛相依为命，但老人依旧活着，仿佛比往日更加洒脱与坚强。
-                    </p>
-                    <p>《活着(新版)》荣获意大利格林扎纳•卡佛文学奖最高奖项（1998年）、台湾《中国时报》10本好书奖（1994年）、香港“博益”15本好书奖（1994年）、第三届世界华文“冰心文学奖”（2002年），入选香港《亚洲周刊》评选的“20世纪中文小说百年百强”、中国百位批评家和文学编辑评选的“20世纪90年代最有影响的10部作品”。
-                    </p>
-                </div>
+                <p>
+                    《活着(新版)》讲述了农村人福贵悲惨的人生遭遇。福贵本是个阔少爷，可他嗜赌如命，终于赌光了家业，一贫如洗。他的父亲被他活活气死，母亲则在穷困中患了重病，福贵前去求药，却在途中被国民党抓去当壮丁。经过几番波折回到家里，才知道母亲早已去世，妻子家珍含辛茹苦地养大两个儿女。此后更加悲惨的命运一次又一次降临到福贵身上，他的妻子、儿女和孙子相继死去，最后只剩福贵和一头老牛相依为命，但老人依旧活着，仿佛比往日更加洒脱与坚强。
+                </p>
+                <p>
+                    《活着(新版)》荣获意大利格林扎纳•卡佛文学奖最高奖项（1998年）、台湾《中国时报》10本好书奖（1994年）、香港“博益”15本好书奖（1994年）、第三届世界华文“冰心文学奖”（2002年），入选香港《亚洲周刊》评选的“20世纪中文小说百年百强”、中国百位批评家和文学编辑评选的“20世纪90年代最有影响的10部作品”。
+                </p>
                 <h2>
                     <span>作者简介</span>
                     &nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·
                 </h2>
-                <div class="intro">
-                    <p>余华，1960年出生，1983年开始写作。至今已经出版长篇小说4部，中短篇小说集6部，随笔集4部。主要作品有《兄弟》《活着》《许三观卖血记》《在细雨中呼喊》等。其作品已被翻译成20多种语言在美国、英国、法国、德国、意大利、西班牙、荷兰、瑞典、挪威、希腊、俄罗斯、保加利亚、匈牙利、捷克、塞尔维亚、斯洛伐克、波兰、巴西、以色列、日本、韩国、越南、泰国和印度等国出版。曾获意大利格林扎纳·卡佛文学奖（1998年）、法国文学和艺术骑士勋章（2004年）、中华图书特殊贡献奖（2005年）、法国国际信使外国小说奖（2008年）等。
-                    </p>
-                </div>
-
-                <hr color="white">
-                <p align="center" class="sign">M36文学网</p>
+                <p>
+                    余华，1960年出生，1983年开始写作。至今已经出版长篇小说4部，中短篇小说集6部，随笔集4部。主要作品有《兄弟》《活着》《许三观卖血记》《在细雨中呼喊》等。其作品已被翻译成20多种语言在美国、英国、法国、德国、意大利、西班牙、荷兰、瑞典、挪威、希腊、俄罗斯、保加利亚、匈牙利、捷克、塞尔维亚、斯洛伐克、波兰、巴西、以色列、日本、韩国、越南、泰国和印度等国出版。曾获意大利格林扎纳·卡佛文学奖（1998年）、法国文学和艺术骑士勋章（2004年）、中华图书特殊贡献奖（2005年）、法国国际信使外国小说奖（2008年）等。
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- 底部栏 -->
+    <div class="foot">
+        <h3 align="center" class="sign">M36文学网</h3>
+    </div>
 </body>
 
 </html>
