--- a/html/图书详细页模板.html
+++ b/html/图书详细页模板.html
@@ -8,47 +8,6 @@
 </head>
 <link href="../css/style.css" rel="stylesheet" type="text/css">
 <style>
-    .sidemenu {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        background-color: rgba(255, 255, 255, 0.7);
-        border-radius: 6px;
-    }
-
-    .sidemenu a {
-        display: block;
-        color: #000;
-        padding: 15px 16px;
-        text-decoration: none;
-        border-radius: 6px;
-    }
-
-    .sidemenu a.active {
-        background-color: #555;
-        color: white;
-    }
-
-    .sidemenu a:hover:not(.active) {
-        background-color: rgba(255, 255, 255, 1);
-    }
-
-    .row div {
-        float: left;
-        margin: 10px;
-    }
-
-    .content {
-        width: 70%;
-        margin: 20px;
-        padding: 0 30px;
-        border-radius: 6px;
-        background-color: rgba(255, 255, 255, 0.8);
-    }
-
-    .row {
-        height: 900px;
-    }
 </style>
 
 <body>
@@ -58,7 +17,7 @@
         <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;</li>
         <li><a href="../index.html">首页</a></li>
-        <li><a href="链接">完本</a></li>
+        <li><a href="链接">排行</a></li>
         <li><a href="链接">名家经典</a></li>
         <li><a href="链接">国外经典</a></li>
         <li><a href="链接">武侠专区</a></li>
