摆烂，明天写

--- a/html/santi.html
+++ b/html/santi.html
@@ -15,13 +15,12 @@
             &nbsp;
         </li>
         <li><a href="../index.html">首页</a></li>
-        <li><a href="../html/rank.html">排行</a></li>
-        <li><a href="../html/famous.html">名家经典</a></li>
+        <li><a href="../html/famous.html">古籍经典</a></li>
         <li><a href="../html/foreign.html">国外经典</a></li>
         <li><a href="../html/Wuxia.html">武侠专区</a></li>
         <li><a href="../html/hist.html">历史专区</a></li>
-        <li><a href="../html/sci.html">科幻专区</a></li>
-        <li><a href="../html/fantasy.html">玄幻专区</a></li>
+        <li><a class="active" href="../html/sci.html">科幻专区</a></li>
+        <li><a href="../html/fantasy.html">奇幻专区</a></li>
         <li><a href="../html/classify.html">作品分类</a></li>
     </ul>
     <hr color="white">
@@ -29,15 +28,7 @@
     <div class="row">
         <div>
             <ul class="sidemenu">
-                <li><a href="to live.html">《活着》</a></li>
-                <li><a href="blood.html">《许三观卖血记》</a></li>
                 <li><a class="active" href="santi.html">《三体》</a></li>
-                <li><a href="zi.html">《骆驼祥子》</a></li>
-                <li><a href="fire.html">《冰与火之歌》</a></li>
-                <li><a href="people.html">《人间失格》</a></li>
-                <li><a href="year.html">《百年孤独》</a></li>
-                <li><a href="moon.html">《月亮和六便士》</a></li>
-                <li><a href="older.html">《老人与海》</a></li>
             </ul>
         </div>
 
