--- a/html/图书详细页模板.html
+++ b/html/图书详细页模板.html
@@ -18,12 +18,12 @@
             &nbsp;</li>
         <li><a href="../index.html">首页</a></li>
         <li><a href="链接">排行</a></li>
-        <li><a href="链接">名家经典</a></li>
+        <li><a href="链接">古籍经典</a></li>
         <li><a href="链接">国外经典</a></li>
         <li><a href="链接">武侠专区</a></li>
         <li><a href="链接">历史专区</a></li>
         <li><a href="链接">科幻专区</a></li>
-        <li><a href="链接">玄幻专区</a></li>
+        <li><a href="链接">奇幻专区</a></li>
         <li><a href="链接">作品分类</a></li>
     </ul>
     <!-- topmenu实现 -->
