--- a/html/blood.html
+++ b/html/blood.html
@@ -7,6 +7,7 @@
     <link href="../image/Hutao.png" rel="icon">
 </head>
 <link href="../css/style.css" rel="stylesheet" type="text/css">
+
 <body>
     <div class="header"><a href="../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
 
@@ -14,15 +15,14 @@
         <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;
         </li>
-        <li><a href="../index.html">首页</a></li>
-        <li><a href="../html/rank.html">排行</a></li>
-        <li><a href="../html/famous.html">名家经典</a></li>
-        <li><a href="../html/foreign.html">国外经典</a></li>
-        <li><a href="../html/Wuxia.html">武侠专区</a></li>
-        <li><a href="../html/hist.html">历史专区</a></li>
-        <li><a href="../html/sci.html">科幻专区</a></li>
-        <li><a href="../html/fantasy.html">玄幻专区</a></li>
-        <li><a href="../html/classify.html">作品分类</a></li>
+        <li><a href="index.html">首页</a></li>
+        <li><a class="active" href="html/famous.html">古籍经典</a></li>
+        <li><a href="html/foreign.html">国外经典</a></li>
+        <li><a href="html/Wuxia.html">武侠专区</a></li>
+        <li><a href="html/hist.html">历史专区</a></li>
+        <li><a href="html/sci.html">科幻专区</a></li>
+        <li><a href="html/fantasy.html">奇幻专区</a></li>
+        <li><a href="html/classify.html">作品分类</a></li>
     </ul>
     <hr color="white">
     <div class="row">
@@ -32,11 +32,6 @@
                 <li><a class="active" href="blood.html">《许三观卖血记》</a></li>
                 <li><a href="santi.html">《三体》</a></li>
                 <li><a href="zi.html">《骆驼祥子》</a></li>
-                <li><a href="fire.html">《冰与火之歌》</a></li>
-                <li><a href="people.html">《人间失格》</a></li>
-                <li><a href="year.html">《百年孤独》</a></li>
-                <li><a href="moon.html">《月亮和六便士》</a></li>
-                <li><a href="older.html">《老人与海》</a></li>
             </ul>
         </div>
 
