优化主界面

--- a/index.html
+++ b/index.html
@@ -57,17 +57,15 @@
     <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         &nbsp;
     </li>
-    <li><a href="index.html">首页</a></li>
-    <li><a href="html/rank.html">排行</a></li>
-    <li><a href="html/famous.html">著名作家</a></li>
+    <li><a class="active" href="index.html">首页</a></li>
+    <li><a href="html/famous.html">古籍经典</a></li>
     <li><a href="html/foreign.html">国外经典</a></li>
     <li><a href="html/Wuxia.html">武侠专区</a></li>
     <li><a href="html/hist.html">历史专区</a></li>
     <li><a href="html/sci.html">科幻专区</a></li>
-    <li><a href="html/fantasy.html">玄幻专区</a></li>
+    <li><a href="html/fantasy.html">奇幻专区</a></li>
     <li><a href="html/classify.html">作品分类</a></li>
 </ul>
-
 <!-- 主页图书展示 -->
 <div class="row">
     <a href="html/to live.html">
