--- a/html/zi.html
+++ b/html/zi.html
@@ -16,7 +16,7 @@
         &nbsp;
     </li>
     <li><a href="../index.html">首页</a></li>
-    <li><a class="active" href="../html/famous.html">古籍经典</a></li>
+    <li><a href="../html/famous.html">古籍经典</a></li>
     <li><a href="../html/foreign.html">国外经典</a></li>
     <li><a href="../html/Wuxia.html">武侠专区</a></li>
     <li><a href="../html/hist.html">历史专区</a></li>
