--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         &nbsp;
     </li>
     <li><a class="active" href="index.html">首页</a></li>
+    <li><a href="html/hot.html">热门推荐</a></li>
     <li><a href="html/famous.html">古籍经典</a></li>
     <li><a href="html/foreign.html">国外经典</a></li>
     <li><a href="html/Wuxia.html">武侠专区</a></li>
@@ -213,8 +214,10 @@
     </a>
 </div>
 <!-- 底部栏 -->
-<div class="foot">
-    <h3 align="center" class="sign">M36文学网</h3>
+<div class="footer">
+    <h2>
+        M36 文学网 Literature|Cultivate|Learn
+    </h2>
 </div>
 </body>
 
