--- a/html/blood.html
+++ b/html/blood.html
@@ -15,14 +15,15 @@
         <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;
         </li>
-        <li><a href="index.html">首页</a></li>
-        <li><a href="html/famous.html">古籍经典</a></li>
-        <li><a href="html/foreign.html">国外经典</a></li>
-        <li><a href="html/Wuxia.html">武侠专区</a></li>
-        <li><a href="html/hist.html">历史专区</a></li>
-        <li><a href="html/sci.html">科幻专区</a></li>
-        <li><a href="html/fantasy.html">奇幻专区</a></li>
-        <li><a href="html/classify.html">作品分类</a></li>
+        <li><a href="../index.html">首页</a></li>
+        <li><a class="active" href="html/hot.html">热门推荐</a></li>
+        <li><a href="../html/famous.html">古籍经典</a></li>
+        <li><a href="../html/foreign.html">国外经典</a></li>
+        <li><a href="../html/Wuxia.html">武侠专区</a></li>
+        <li><a href="../html/hist.html">历史专区</a></li>
+        <li><a href="../html/sci.html">科幻专区</a></li>
+        <li><a href="../html/fantasy.html">奇幻专区</a></li>
+        <li><a href="../html/classify.html">作品分类</a></li>
     </ul>
     <hr color="white">
     <div class="row">
@@ -30,8 +31,9 @@
             <ul class="sidemenu">
                 <li><a href="to live.html">《活着》</a></li>
                 <li><a class="active" href="blood.html">《许三观卖血记》</a></li>
-                <li><a href="santi.html">《三体》</a></li>
                 <li><a href="zi.html">《骆驼祥子》</a></li>
+                <li><a href="santi.html">《三体》</a></li>
+                <li><a href="fire.html">《冰与火之歌》</a></li>
             </ul>
         </div>
 
@@ -81,12 +83,19 @@
                     &nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·&nbsp;·
                 </h2>
                 <div class="intro">
-                    <p>余华，1960年4月3日生于浙江杭州，3岁时随父母迁至海盐，在海盐读完小学和中学。曾经从事过5年的牙医工作，1983年开始写作，已经完成长篇小说4部，中短篇小说集6部，随笔集3部，其作品被翻译成二十多种文字，在近三十个国家出版。曾获意大利格林扎纳•卡佛文学奖（1998年）、法国文学和艺术骑士勋章（2004年）、中华图书特殊贡献奖（2005年）、法国国际信使外国小说奖（2008年）等。
+                    <p>
+                        余华，1960年4月3日生于浙江杭州，3岁时随父母迁至海盐，在海盐读完小学和中学。曾经从事过5年的牙医工作，1983年开始写作，已经完成长篇小说4部，中短篇小说集6部，随笔集3部，其作品被翻译成二十多种文字，在近三十个国家出版。曾获意大利格林扎纳•卡佛文学奖（1998年）、法国文学和艺术骑士勋章（2004年）、中华图书特殊贡献奖（2005年）、法国国际信使外国小说奖（2008年）等。
                     </p>
                 </div>
-
-                <hr color="white">
-                <p align="center" class="sign">M36文学网</p>
+            </div>
+        </div>
+    </div>
+    <!-- 底部栏 -->
+    <div class="footer">
+        <h2>
+            M36 文学网 Literature|Cultivate|Learn
+        </h2>
+    </div>
 </body>
 
 </html>
