--- a/html/famous.html
+++ b/html/famous.html
@@ -70,6 +70,7 @@
         background-image: url(../image/gujiLogo.png);
     }
 </style>
+
 <body>
 <div class="header"><a href="../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
 <!-- 顶部菜单 -->
@@ -78,6 +79,7 @@
         &nbsp;
     </li>
     <li><a href="../index.html">首页</a></li>
+    <li><a href="../html/hot.html">热门推荐</a></li>
     <li><a class="active" href="../html/famous.html">古籍经典</a></li>
     <li><a href="../html/foreign.html">国外经典</a></li>
     <li><a href="../html/Wuxia.html">武侠专区</a></li>
@@ -154,8 +156,10 @@
     </div>
 </div>
 <!-- 底部栏 -->
-<div class="foot" style="display: block">
-    <h3 align="center" class="sign">M36文学网</h3>
+<div class="footer">
+    <h2>
+        M36 文学网 Literature|Cultivate|Learn
+    </h2>
 </div>
 
 </body>
