--- a/html/to live.html
+++ b/html/to live.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>M36文学网</title>
@@ -9,12 +10,13 @@
 
 <body>
     <div class="header"><a href="../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
-<!-- 顶部菜单 -->
+    <!-- 顶部菜单 -->
     <ul class="topmenu">
         <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;
         </li>
         <li><a href="../index.html">首页</a></li>
+        <li><a class="active" href="../html/hot.html">热门推荐</a></li>
         <li><a href="../html/famous.html">古籍经典</a></li>
         <li><a href="../html/foreign.html">国外经典</a></li>
         <li><a href="../html/Wuxia.html">武侠专区</a></li>
@@ -31,6 +33,8 @@
                 <li><a class="active" href="to live.html">《活着》</a></li>
                 <li><a href="blood.html">《许三观卖血记》</a></li>
                 <li><a href="zi.html">《骆驼祥子》</a></li>
+                <li><a href="santi.html">《三体》</a></li>
+                <li><a href="fire.html">《冰与火之歌》</a></li>
             </ul>
         </div>
         <div class="content">
@@ -86,9 +90,9 @@
         </div>
     </div>
     <!-- 底部栏 -->
-    <div class="foot">
-        <h3 align="center" class="sign">M36文学网</h3>
+    <div class="footer">
+        <h2>
+            M36 文学网 Literature|Cultivate|Learn
+        </h2>
     </div>
 </body>
-
-</html>
