--- a/html/fire.html
+++ b/html/fire.html
@@ -7,6 +7,7 @@
     <link href="../image/Hutao.png" rel="icon">
 </head>
 <link href="../css/style.css" rel="stylesheet" type="text/css">
+
 <body>
 <div class="header"><a href="../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
 
@@ -15,18 +16,23 @@
         &nbsp;
     </li>
     <li><a href="../index.html">首页</a></li>
+    <li><a class="active" href="../html/hot.html">热门推荐</a></li>
     <li><a href="../html/famous.html">古籍经典</a></li>
     <li><a href="../html/foreign.html">国外经典</a></li>
     <li><a href="../html/Wuxia.html">武侠专区</a></li>
     <li><a href="../html/hist.html">历史专区</a></li>
     <li><a href="../html/sci.html">科幻专区</a></li>
-    <li><a class="active" href="../html/fantasy.html">奇幻专区</a></li>
+    <li><a href="../html/fantasy.html">奇幻专区</a></li>
     <li><a href="../html/classify.html">作品分类</a></li>
 </ul>
 <hr color="white">
 <div class="row">
     <div>
         <ul class="sidemenu">
+            <li><a href="to live.html">《活着》</a></li>
+            <li><a href="blood.html">《许三观卖血记》</a></li>
+            <li><a href="zi.html">《骆驼祥子》</a></li>
+            <li><a href="santi.html">《三体》</a></li>
             <li><a class="active" href="fire.html">《冰与火之歌》</a></li>
         </ul>
     </div>
@@ -118,8 +124,15 @@
                 <p>
                     2011年，美国《时代周刊》将马丁评为"全世界最有影响力的一百位人物"之一，肯定了乔治·马丁在幻想文坛上的至尊地位。</p>
             </div>
-            <hr color="white">
-            <p align="center" class="sign">M36文学网</p>
+        </div>
+    </div>
+</div>
+<!-- 底部栏 -->
+<div class="footer">
+    <h2>
+        M36 文学网 Literature|Cultivate|Learn
+    </h2>
+</div>
 
 </body>
 
