--- a/html/hist.html
+++ b/html/hist.html
@@ -1,14 +1,35 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>M36文学网</title>
+    <link href="../image/Hutao.png" rel="icon">
+</head>
+<link href="../css/style.css" rel="stylesheet" type="text/css">
+
+<body>
+<div class="header"><a href="../index.html" title="返回首页"><img alt="" src="../image/"></a></div>
+
 <ul class="topmenu">
     <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
         &nbsp;
     </li>
     <li><a href="../index.html">首页</a></li>
+    <li><a href="../html/hot.html">热门推荐</a></li>
     <li><a href="../html/famous.html">古籍经典</a></li>
     <li><a href="../html/foreign.html">国外经典</a></li>
     <li><a href="../html/Wuxia.html">武侠专区</a></li>
-    <li><a href="../html/hist.html">历史专区</a></li>
+    <li><a class="active" href="../html/hist.html">历史专区</a></li>
     <li><a href="../html/sci.html">科幻专区</a></li>
     <li><a href="../html/fantasy.html">奇幻专区</a></li>
     <li><a href="../html/classify.html">作品分类</a></li>
 </ul>
 <a>这是一个未完成的项目</a>
+
+<!-- 底部栏 -->
+<div class="footer">
+    <h2>
+        M36 文学网 Literature|Cultivate|Learn
+    </h2>
+</div>
