--- a/html/older.html
+++ b/html/older.html
@@ -3,6 +3,7 @@
         &nbsp;
     </li>
     <li><a href="../index.html">首页</a></li>
+    <li><a href="../html/hot.html">热门推荐</a></li>
     <li><a href="../html/famous.html">古籍经典</a></li>
     <li><a href="../html/foreign.html">国外经典</a></li>
     <li><a href="../html/Wuxia.html">武侠专区</a></li>
@@ -12,3 +13,10 @@
     <li><a href="../html/classify.html">作品分类</a></li>
 </ul>
 <a>这是一个未完成的项目</a>
+
+<!-- 底部栏 -->
+<div class="footer">
+    <h2>
+        M36 文学网 Literature|Cultivate|Learn
+    </h2>
+</div>
