--- a/html/santi.html
+++ b/html/santi.html
@@ -15,11 +15,13 @@
             &nbsp;
         </li>
         <li><a href="../index.html">首页</a></li>
+        \
+        <li><a class="active" href="../html/hot.html">热门推荐</a></li>
         <li><a href="../html/famous.html">古籍经典</a></li>
         <li><a href="../html/foreign.html">国外经典</a></li>
         <li><a href="../html/Wuxia.html">武侠专区</a></li>
         <li><a href="../html/hist.html">历史专区</a></li>
-        <li><a class="active" href="../html/sci.html">科幻专区</a></li>
+        <li><a href="../html/sci.html">科幻专区</a></li>
         <li><a href="../html/fantasy.html">奇幻专区</a></li>
         <li><a href="../html/classify.html">作品分类</a></li>
     </ul>
@@ -28,7 +30,11 @@
     <div class="row">
         <div>
             <ul class="sidemenu">
+                <li><a href="to live.html">《活着》</a></li>
+                <li><a href="blood.html">《许三观卖血记》</a></li>
+                <li><a href="zi.html">《骆驼祥子》</a></li>
                 <li><a class="active" href="santi.html">《三体》</a></li>
+                <li><a href="fire.html">《冰与火之歌》</a></li>
             </ul>
         </div>
 
@@ -101,9 +107,15 @@
                     <p>2006年中国科幻银河奖（第十八届）特别奖：《三体》</p>
                     <p>2010年中国科幻银河奖（第二十二届）特等奖：《三体III：死神永生》</p>
                 </div>
-                <hr color="white">
-                <p align="center" class="sign">M36文学网</p>
-
+            </div>
+        </div>
+    </div>
+    <!-- 底部栏 -->
+    <div class="footer">
+        <h2>
+            M36文学网 Literature|Cultivate|Learn
+        </h2>
+    </div>
 </body>
 
 </html>
