--- a/html/zi.html
+++ b/html/zi.html
@@ -16,6 +16,7 @@
         &nbsp;
     </li>
     <li><a href="../index.html">首页</a></li>
+    <li><a class="active" href="../html/hot.html">热门推荐</a></li>
     <li><a href="../html/famous.html">古籍经典</a></li>
     <li><a href="../html/foreign.html">国外经典</a></li>
     <li><a href="../html/Wuxia.html">武侠专区</a></li>
@@ -31,6 +32,8 @@
             <li><a href="to live.html">《活着》</a></li>
             <li><a href="blood.html">《许三观卖血记》</a></li>
             <li><a class="active" href="zi.html">《骆驼祥子》</a></li>
+            <li><a href="santi.html">《三体》</a></li>
+            <li><a href="fire.html">《冰与火之歌》</a></li>
         </ul>
     </div>
 
@@ -93,9 +96,15 @@
                         余华，1960年出生，1983年开始写作。至今已经出版长篇小说4部，中短篇小说集6部，随笔集4部。主要作品有《兄弟》《活着》《许三观卖血记》《在细雨中呼喊》等。其作品已被翻译成20多种语言在美国、英国、法国、德国、意大利、西班牙、荷兰、瑞典、挪威、希腊、俄罗斯、保加利亚、匈牙利、捷克、塞尔维亚、斯洛伐克、波兰、巴西、以色列、日本、韩国、越南、泰国和印度等国出版。曾获意大利格林扎纳·卡佛文学奖（1998年）、法国文学和艺术骑士勋章（2004年）、中华图书特殊贡献奖（2005年）、法国国际信使外国小说奖（2008年）等。
                     </p>
                 </div>
-
-                <hr color="white">
-                <p align="center" class="sign">M36文学网</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="footer">
+    <h2>
+        M36 文学网 Literature|Cultivate|Learn
+    </h2>
+</div>
 </body>
 
 </html>
