--- a/index.html
+++ b/index.html
@@ -7,132 +7,6 @@
     <title>M36文学网</title>
     <link href="image/Hutao.png" rel="icon">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <style>
-        /*主界面背景*/
-        .Main {
-            margin: 10px;
-            padding: 10px;
-            overflow: auto;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        /*主页热门小说展示框*/
-        .Main a {
-            /*display: block;*/
-            /*float: left;*/
-            width: 300px;
-            height: 225px;
-            margin: 20px;
-            padding: 0 30px;
-            border-radius: 30px;
-            background-color: #f1f2f3;
-            text-decoration: none;
-            color: black;
-        }
-
-        /*主页热门书籍封面图片*/
-        .Main a img {
-            width: 100px;
-            height: 140px;
-            border-radius: 10px;
-            float: left;
-        }
-
-        .Main a:hover {
-            position: relative;
-            bottom: 10px;
-        }
-
-        /*俳句*/
-        .paijuMain {
-            width: 960px;
-            margin: 0 auto;
-            overflow: hidden;
-            background: url('image/flowerBorder.png') center center no-repeat;
-        }
-
-        .paiju {
-            float: left;
-            margin-right: 2px;
-        }
-
-        /* 标题格式 */
-        .paiju h2 {
-            width: 18px;
-            font-size: 16px;
-            float: left;
-            height: 130px;
-            font-weight: normal;
-            margin-left: 10px;
-            margin-top: 20px;
-            color: #567878;
-        }
-
-        /* 俳句格式 */
-        .paiju li {
-            text-align: center;
-            list-style: none;
-            float: left;
-            width: 155px;
-            height: 150px;
-            padding-top: 3px;
-        }
-
-        /* 俳句底部线条 */
-        .paiju li div {
-            font-size: 18px;
-            color: #89520A;
-            line-height: 28px;
-            height: 113px;
-            background: url('image/paijuLine.gif') center bottom no-repeat;
-            margin: 15px auto 0;
-            text-align: left;
-            padding-left: 15px;
-        }
-
-        /* 诗词名称，作者小字实现 */
-        .paiju li span {
-            color: #888;
-            font-size: 14px;
-            font-family: 'num', 'Simsun', '宋体', serif;
-            float: right;
-            margin-right: 20px;
-            overflow: hidden;
-            display: block;
-        }
-
-        /*介绍*/
-        .jieshao {
-            width: 400px;
-            height: 145px;
-            float: left;
-        }
-
-        /*logo图片*/
-        .logo {
-            width: 125px;
-            height: 125px;
-            margin-left: 80px;
-            margin-top: 35px;
-            float: left;
-        }
-
-        /* 介绍框文字定位 */
-        #dialog {
-            display: block;
-            margin-left: 30px;
-            margin-top: 30px;
-            width: 380px;
-        }
-
-        /* 介绍框字体大小 */
-        .Say {
-            color: #5B5958;
-            font-size: 18px;
-        }
-    </style>
 </head>
 
 <body>
@@ -185,31 +59,31 @@
 </div>
 <!-- 主页图书展示 -->
 <div class="Main">
-    <a href="html/to live.html">
+    <a href="html/hot/to live.html">
         <h2 align="center">活着</h2><img src="image/live.jpg"><br>
     </a>
-    <a href="html/blood.html">
+    <a href="html/hot/blood.html">
         <h2 align="center">许三观卖血记</h2><img src="image/blood.jpg"><br>
     </a>
-    <a href="html/santi.html">
+    <a href="html/hot/santi.html">
         <h2 align="center">三体</h2><img src="image/santi.jpg"><br>
     </a>
-    <a href="html/zi.html">
+    <a href="html/hot/zi.html">
         <h2 align="center">骆驼祥子</h2><img src="image/zi.jpg"><br>
     </a>
-    <a href="html/fire.html">
+    <a href="html/hot/fire.html">
         <h2 align="center">冰与火之歌</h2><img src="image/fire.jpg"><br>
     </a><br>
-    <a href="html/people.html">
+    <a href="html/hot/people.html">
         <h2 align="center">人间失格</h2><img src="image/people.jpg"><br>
     </a>
-    <a href="html/year.html">
+    <a href="html/hot/year.html">
         <h2 align="center">百年孤独</h2><img src="image/year.jpg"><br>
     </a>
-    <a href="html/moon.html">
+    <a href="html/hot/moon.html">
         <h2 align="center">月亮和六便士</h2><img src="image/moon.jpg"><br>
     </a>
-    <a href="html/older.html">
+    <a href="html/hot/older.html">
         <h2 align="center">老人与海</h2><img src="image/older.jpg"><br>
     </a>
 </div>
